fixed nav overlap bug

--- a/pwa/src/styles/components/_nav.scss
+++ b/pwa/src/styles/components/_nav.scss
@@ -3,6 +3,7 @@
   display: flex;
   height: 50px;
   width: 100vw;
+  top: 0;
   background: white;
   box-shadow: 0 8px 6px -6px rgba(119,119,119,.25);
 }
